--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/forescout/job/o81jafwm'>Forescout Technologies Inc. Careers - Security Research Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-27</p>
@@ -73,7 +77,11 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/6359D92EEA'>Viva Wallet - Jobs: Security Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
+<hr/>
+<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -98,7 +106,7 @@
 <p>3 days ago ... Sygnum has a job opening for Senior Security Engineer in Z?rich (published: 
 23.08.2018). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -110,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-operations-center-csoc-engineer-6497'>Cyber Security Operations Center (CSOC) Engineer - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/cyber-security-operations-center-csoc-engineer-6497'>Cyber Security Operations Center (CSOC) Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Why choose between doing meaningful work and having a fulfilling life? At 
 MITRE, you can have both. That's because MITRE people are committed to 
@@ -203,7 +211,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -215,7 +223,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -278,7 +286,7 @@ Loading.</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of MS Cloud Security Engineer at Girteka Logistics.</p>
 <hr/>
-<h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/E32FDA7630?viewed=true'>AAS2089-1 - IT/Cyber Security Engineer, Brussels ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 hours ago ... Apply online for the job of AAS2089-1 - IT/Cyber Security Engineer, Brussels - 
 Tue 23rd July (reissue) at EMW, Inc.</p>
@@ -319,7 +327,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4041125002?gh_src=b9e24da22'>Job Application for Senior Security Architect at Anaplan</a></h5> 
 <p><span class="badge badge-light">San Francisco, United States</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
@@ -363,17 +371,17 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers-texascapitalbank.icims.com/jobs/4077/corporate-security-fraud-analyst-i/job'>Corporate Security Fraud Analyst I</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-texascapitalbank.icims.com/jobs/4077/corporate-security-fraud-analyst-i/job'>Corporate Security Fraud Analyst I</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Texas Capital Bank is now hiring a Corporate Security Fraud Analyst I in 
 Richardson Operations Center, Texas. Review all of the job details and apply 
 today!</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/17pcjkkwnycascoxode3pir1pa'>Application Security Engineer | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/17pcjkkwnycascoxode3pir1pa'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -393,7 +401,7 @@ today!</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -439,7 +447,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/637356d4-b72a-4fc4-b4c7-4ea76784dd2a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/637356d4-b72a-4fc4-b4c7-4ea76784dd2a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -449,14 +457,6 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <hr/>
 <h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/mattermost/f1e40504-70f8-4a82-8906-ae3270e43704'>Mattermost - Product Security Engineer (Remote)</a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071997-application-security-engineer-with-java-j2ee'>Bey Application Security Engineer with JAVA/J2EE | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
