--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/loanpal/job/oqFEafwD'>Loanpal Careers - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/checkout/6f6d0713-1978-463a-873f-b0e64dc4363e'>Checkout.com - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -62,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -80,11 +84,19 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
+<h5><a href='https://drover.workable.com/j/E9C5D6221B?viewed=true'>Jedi / Devops Engineer - Apply online - Drover - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Apply online for the job of Jedi / Devops Engineer at Drover.</p>
+<hr/>
+<h5><a href='https://fetchr.workable.com/jobs/1080353'>DevOps Engineer - Apply online - Fetchr - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 17, 2019 ... Apply online for the job of DevOps Engineer at Fetchr.</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692351060-sr-devops-engineer'>Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692351060-sr-devops-engineer'>Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -98,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/devops-engineer-czvluQRIur6zrIaKld2Sj6'>DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -204,11 +216,11 @@ leading?...</p>
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/j66c67jy6mrjhntqb6qszge5ar'>DevOps Engineer at FinTech disruptor | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -243,7 +255,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -326,7 +338,7 @@ us your CV. Any questions before taking the next step? You can contact Dorian.</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
@@ -383,7 +395,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/5B53BAEF07'>OneinaMil - Jobs: DevOps Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/5B53BAEF07'>OneinaMil - Jobs: DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of DevOps Engineer at OneinaMil.</p>
 <hr/>
@@ -423,7 +435,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -449,21 +461,6 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>vor 1 Tag ... PALTRON GmbH has a job opening for DevOps Engineer (m/w/d) in Munich (
 published: 08.03.2019). Apply now or check the other available jobs.</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Astucemedia/743999692110443-junior-devops'>Astucemedia Junior DevOps | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
-Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
-available?...</p>
-<hr/>
-<h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
-operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
 <hr/>
 
 
